# ccardmodule

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README  compile_commands.json  installIntrepidToolchain  installTest  preparelinux.sh
ccardcore/: .built-in.o.cmd  CMakeLists.txt  Kbuild  ccard.h  ccardlibrary.c  ccardmodule.c  dsa.c  gps.c  i2c_ccard.c  i2cctl.c  i2cctl.h  magnetorquer.c  spi_ccard.c  thruster.c
